feat: fork and upgrade to pynose
- this only supports versions of python supported by pynose - see https://github.com/mdmintz/pynose/blob/master/setup.py#L115

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,19 @@
 [tox]
-envlist = py25, py26, py27, py33, py34, py35, py36
+min_version = 4.0
+env_list = lint, type, py3{7,8,9,10,11,12,13}
 
 [testenv]
-deps = nose
-commands = python setup.py test
+deps =
+  pynose
+  pytest
+commands = pytest tests.py
 
-[testenv:py25]
-setenv = PIP_INSECURE=1
+[testenv:type]
+deps =
+  mypy
+commands = mypy --exclude '^(.tox|build|pynose_exclude.egg-info|venv)/.*' .
+
+[testenv:lint]
+deps =
+  flake8
+commands = flake8 --filename=*.py,test_dirs/**/*.py --max-line-length=120 --exclude=venv/*,.tox/*,build/*,*.egg-info/*
