--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,10 @@
 [tox]
 min_version = 4.0
-env_list = lint, type, py3{7,8,9,10,11,12,13}
+env_list = lint, type, test, release
+package = wheel
+wheel_build_env = .pkg
 
-[testenv]
+[testenv:test]
 deps =
   pynose
   pytest
